# sched-v2

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
app/: admin_local_settings.py  deploy_settings.py  localdev_settings.py  localdev_urls.py  monthly_workspace_demo_data.py
app/ai/: interfaces.py  noop_client.py  openai_client.py
app/api/: django_runtime.py  django_urls.py  django_views.py  django_workspace.py  monthly_workspace_copy.py  routes.py  schemas.py
app/engine/: __init__.py  contracts.py  evaluation.py  monthly.py  monthly_parity.py  validators.py
app/evals/: __init__.py  refine_intent_cases.json  refine_intent_eval.py
app/infra/: django_repositories.py  models.py  repositories.py
app/services/: apply.py  explain.py  explain_langgraph.py  export.py  (+5 more)
docs/: architecture.md  case-study-v1-to-v2.md  deployment.md  tenant-data.md
scripts/: eval_refine_intents.py  regenerate_shared_demo_monthly_parity_baseline.py
tests/: conftest.py  test_day_explain.py  test_django_adapter.py  test_django_admin.py  test_django_persistence_models.py  test_django_repositories.py  test_django_runtime.py  test_engine_evaluation.py  test_engine_monthly.py  test_engine_monthly_parity.py  test_engine_validators.py  test_localdev_bootstrap.py  test_monthly_schedule_integration.py  test_monthly_workspace_ui.py  test_openai_audio_transcription_client.py  test_refine_intent_eval.py  test_refine_langgraph.py  test_refine_preview_diff.py  test_reviewer_eval_story.py  test_service_skeletons.py
(+16 files in other folders)
